testsuite/tests/typing-modules/pr13099/test.compilers.reference
File "lib2_client.ml", line 19, characters 11-36:
19 | module _ = F (struct type t = T end)
                ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This functor has type
<<<<<<< HEAD
       "functor (T : sig type t end) ->
         sig type t = Lib1_client__X.t val f : T.t -> unit end"
||||||| 23e84b8c4d
=======
       (T : sig type t end) ->
         sig type t = Lib1_client__X.t val f : T.t -> unit end
>>>>>>> d505d53be15ca18a648496b70604a7b4db15db2a
       The parameter cannot be eliminated in the result type.
       Please bind the argument to a module identifier.
